--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ share/python-wheels/
 MANIFEST
 
 # CSV
-.csv
+*.csv
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
